# edflib_fork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  edflib.c  edflib.h  sine_generator.c  sweep_generator.c  test_edflib.c  test_generator.c
